--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
 				<option>easeInOutBounce</option>
 			</select>
 		</p>
-		<div align="center">
-			<div style="width:205px;" align="center">
-				<div class="slots" id="slots_a">
-					<div class="wrapper" style="margin-top: 0px;"></div>
+		<div id="num-display">
+			<div style="" align="center">
+				<div class="slots" id="tens-digit">
+					<div class="wrapper" style="margin-top: -20px;"></div>
 				</div>
-				<div class="slots" id="slots_b">
-					<div class="wrapper" style="margin-top: 0px;"></div>
+				<div class="slots" id="ones-digit">
+					<div class="wrapper" style="margin-top: -20px;"></div>
 				</div>
 				<div style="text-align:center;clear:both;">
 					<button class="btn btn-warning btn-big" style="margin-top:4px;" id="btn_start">Start</button>
 				</div>
 				<p id="result" style="text-align:center;color:red;font-size:42px;margin-top:0px"></p>
 			</div>
-			<div id="js-already-num-block"></div>
 		</div>
+			<div id="js-already-num-block"></div>
 	</body>
 </html>
