--- a/index.html
+++ b/index.html
@@ -67,29 +67,27 @@
 		
 		<img src="./image/pict/dance1.png" class="logo_left">
 		<img src="./image/pict/dance2.png" class="logo_left">
-		<img src="./image/pict/dance6.png" class="logo_left">
+		<!-- <img src="./image/pict/dance6.png" class="logo_left"> -->
 		
 		<img src="./image/pict/dance3.png" class="logo_right">
 		<img src="./image/pict/dance5.png" class="logo_right">
-		<img src="./image/pict/dance4.png" class="logo_right">
+		<!-- <img src="./image/pict/dance4.png" class="logo_right"> -->
 		
 		
-		<div align="center">
-			<div style="width:205px;" align="center">
-				<div class="slots" id="tens-digit">
+		<div id="num-display">
+			<div align="center">
+				<div class="slots" id="tens-digit" style="marigin-right: 5px;">
 					<div class="wrapper"></div>
 				</div>
 				<div class="slots" id="ones-digit">
 					<div class="wrapper"></div>
 				</div>
-				<div style="text-align:center;clear:both;">
-					<button class="btn btn-warning btn-lg" id="btn_start">Start</button>
+				<div>
+					<button class="btn btn-warning btn-big" id="btn_start">Start</button>
 				</div>
-				<!-- ↓ これ使ってる！？ -->
-				<p id="result" style="text-align:center;color:red;font-size:42px;margin-top:0px"></p>
 			</div>
-			<div id="js-already-num-block"></div>
 		</div>
+		<div id="js-already-num-block"></div>
 
 		
 		<!-- BGM -->
