--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		
 	</head>
 	<body>
+  <div class="inner">
 		<div class="title">
 			<font color="red"    >B</font>
 			<font color="skyblue">I</font>
@@ -65,13 +66,6 @@
 			</p>
 		</div>
 		
-		<img src="./image/pict/dance1.png" class="logo_left">
-		<img src="./image/pict/dance2.png" class="logo_left">
-		<!-- <img src="./image/pict/dance6.png" class="logo_left"> -->
-		
-		<img src="./image/pict/dance3.png" class="logo_right">
-		<img src="./image/pict/dance5.png" class="logo_right">
-		<!-- <img src="./image/pict/dance4.png" class="logo_right"> -->
 		
 		
 		<div id="num-display">
@@ -108,6 +102,6 @@
 			$("#sound_1").get(0).play();
 		})
 		</script> -->
-		
+	  </div>	
 	</body>
 </html>
