--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<font color="red"    >B</font>
 			<font color="skyblue">I</font>
 			<font color="green"  >N</font>
-			<font color="yellow" >G</font>
+			<font color="orange" >G</font>
 			<font color="violet" >O</font>
 			!!!
 		</div>
